<resources>
    <string name="app_name">Inferno</string>
    <string name="start">Начать</string>
    <string name="exit">Выйти</string>
    <string name="inferno">INFERNO</string>
    <string name="this_is_just">Этого всего лишь</string>
    <string name="openactivitywithlistofdevelopers">OpenActivityWithListOfDevelopers</string>
    <string name="lefthanditem">leftHandItem</string>
    <string name="hpbar">HPBar</string>
    <string name="righthanditem">rightHandItem</string>
    <string name="dobrynya_choose">Добрыня выбросил </string>
    <string name="tie">Ничья! Счёт </string>
    <string name="win">Ты победил! Счёт </string>
    <string name="lose">Хей, Добрыня победил! Счёт </string>
    <string name="ded_say">TextView</string>
<!--
    <string name="dedSay">Вот и ко мне гости пожаловали... - томно и очень загадочно сказал Деревянный Дед.Тебе предстоит сразиться со мной в игре за два полцарства! Выиграешь и Добрыня заберет их как налог за прохождение этого квеста, проиграешь - останешься здесь навсегда.</string>
-->
    <!--<string name="nextDadSay">Далее...</string>-->
    <string name="answer">сказать</string>
    <string name="nextDedSay">далее...</string>
    <string name="todo">TODO</string>

    <!--TreeGame-->
    <string name="tree_begin1">"Вот и ко мне гости пожаловали…" - томно и очень загадочно сказал Деревянный Дед.
        "Тебе предстоит сразиться со мной в игре за два полцарства! Выиграешь и Добрыня заберет их как налог за прохождение этого квеста, проиграешь - останешься здесь навсегда.</string>
    <string name="tree_begin2">Добрыня давно положил свой глаз на мои полцарства…
        Чтобы получить их, тебе предстоит набрать 100 очков!
        Игра проста, как твои предыдущие испытания. Ты справишься (но это не точно)!
        Я загадал число от 1 до 10 включительно. Попробуй угадать!"</string>
    <string name="tree_first">Да, ты прав! Это именно %d.
        Как ты это сделал? У тебя есть 5 очков. Играем дальше!</string>
    <string name="tree_second">Опять верно! Поразительно! Ты заработал еще 15 очков! Итого у тебя 20.
        Следующий раунд будет стоить 30 очков. Соберись! Это целая половина от двух полцарств!</string>
    <string name="tree_third">Невероятно! Ты идешь так гладко, а главное так правильно!
        Как ты мог знать, что я загадаю именно %d? Ты прямо читаешь мои мысли!
        Что ж, вот ты и подобрался к финалу этой пьесы. На кону - 50 очков!
        Выиграешь - и два полцарства твои! Уже чувствуешь запах свободы?</string>
    <string name="tree_won">Ты просто рубишь меня на корню! Вынужден признать, что ты прав!
        Я загадывал именно %d. Я так не хочу расставаться со своими полцарствами, но обязан.
        Договор дороже денег, особенно у нас Деревянных Бабаев.</string>
    <string name="tree_lose">Прощай! Добрыня остался без двух полцарств.
        А он так хотел поскорей уйти на пенсию и заняться политикой…</string>
    <string name="tree_err">Введи число от 1 до 10!</string>
    <string name="tree_end">Хмм…</string>
    <!--TreeGame-->
    <string name="dobrynyaText">Выбери, что ты выбросишь:</string>
    <string name="rock">камень</string>
    <string name="paper">бумага</string>
    <string name="scissors">ножницы</string>
    <string name="name1">Романчук Никита</string>
    <string name="name2">Богословский Никита</string>
    <string name="name3">Ибрагимова Дина</string>
    <string name="name4">Алейник Анна</string>
    <string name="name5">Максимов Константин</string>
    <string name="thanks_text_content">thanks_text_content</string>
    <string name="exit_main_menu">Меню</string>
    <string name="exit_end">Выход</string>
    <string name="title_end">Конец</string>
    <string name="image_in_the_end_layout">imageInTheEndLayout</string>
    <string name="empty">empty</string>
    <string name="text">Чтобы подзаработать немного денег ты согласился поучаствовать в одном эксперименте. Реклама громко гласила: Хочешь внести вклад в науку, пройдя всего один квест? Хочешь подзаработать 1000 евро, если сможешь выбраться из комнаты за 1 час и меньше?  Хочешь оставить свой отпечаток в истории психологии? Тогда приходи к нам! Звони по номеру 20-03-20, узнай все подробности!\n Когда ты позвонил по этому номеру, тебя приветствовал голос явно молодой девушки. Она заботливо узнала о тебе все, начиная от цвета глаз, заканчивая размером обуви. Спросила про образование и вредные привычки (у тебя их нет!). Тебе очень нужны были эти деньги. Тем более это же халява! Поиграл да еще и деньги заплатили. Поэтому ты рассказал ей всё и даже больше. \n В назначенный час ты пришел в их офис. Кажется, что... нет, это точно она! Тебя встречает девушка из телефона. Ты смотришь ей в рот, ибо оттуда льется все тот же мягкий, успокаивающий голос. Она просит тебя присесть и надевает плотную черную повязку на глаза. Говорит, мол, для чистоты эксперимента ты не должен знать, где окажешься. Накатывает сон, ты уже не можешь сдержать позывы зевоты. \n Не стоило пить их чай. Ты собираешься им сказать об этом, предупредить, что чай-то их необычный, спать от него хочется, но уже не можешь. Ты ощущаешь, как твою голову прислоняют к подушке. Морфей уже ждет тебя с распростертыми руками...</string>
    <string name="button">далее...</string>
    <string name="blagodarnost">Выражаем особую благодарность нашему куратору Аскару Ахметову</string>
</resources>
