<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_tree_game"
    tools:context=".TreeGameActivity">

    <TextView
        android:id="@+id/ded_say"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="26dp"
        android:layout_marginTop="26dp"
        android:text="@string/dedSay"
        android:textAlignment="textStart"
        android:textColor="#1d1a1b"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/user_choice"
        android:layout_width="65dp"
        android:layout_height="46dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:autofillHints="no"
        android:background="@drawable/edit_text_border"
        android:ems="10"
        android:inputType="phone"
        app:layout_constraintEnd_toStartOf="@+id/btn_answer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        tools:ignore="LabelFor" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginBottom="18dp"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toTopOf="@+id/btn_answer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/next_ded_say"
        app:srcCompat="@drawable/tree" />

    <Button
        android:id="@+id/btn_answer"
        android:layout_width="65dp"
        android:layout_height="46dp"
        android:layout_marginEnd="80dp"
        android:layout_marginBottom="86dp"
        android:background="@drawable/button_tree_game"
        android:text="@string/answer"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/user_choice"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <Button
        android:id="@+id/next_ded_say"
        android:layout_width="52dp"
        android:layout_height="20dp"
        android:layout_marginTop="26dp"
        android:layout_marginBottom="15dp"
        android:background="@android:color/transparent"
        android:text="@string/nextDedSay"
        android:textColor="#0066cc"
        android:textSize="12sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toTopOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="@+id/ded_say"
        app:layout_constraintTop_toBottomOf="@+id/ded_say" />

    <Button
        android:id="@+id/btn_answer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="enter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_choice" />

    <Button
        android:id="@+id/next_ded_say"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_answer" />
</androidx.constraintlayout.widget.ConstraintLayout>